[package]
name = "BByte_client_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
BByte_util = {path = "../BByte_util"}
simplelog = "0.12.0"
log = "0.4"
uuid = { version = "1.1.2" , features = ["v4"]}
systemstat = "0.2.0"
os_info = "3.5.0"
lazy_static = "1.4.0"
whoami = "1.2.1"
chrono = "0.4"
serde_json = "1"
winapi = { version = "0.3", features = ["winbase", "winnt","winreg", "libloaderapi","errhandlingapi", "fileapi", "handleapi", "memoryapi", "minwindef", "ntdef", "processthreadsapi", ] }
ntapi = "0.4.1"
anyhow = "1.0.38"
env_logger = "0.9"
reqwest = { version = "0.11", features = ["blocking"] }
ureq = "2.3"
winreg = "0.55.0"
rand = "0.9.0"


[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Kernel",
    "Wdk_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
 
]
#openssl-sys = "0.9.75"

[target.'cfg(target_os = "windows")'.dependencies]
conpty = {git = "https://github.com/b23r0/conpty.git"}
windows = {version = "0.39.0" , features = ["Win32_Foundation","Win32_System_Threading", "Win32_UI_WindowsAndMessaging" , "Win32_System_Console"]}

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = "0.25.0"
ioctl-rs = "0.2"
libc = "0.2.126"


#[features]
#vendored = ["openssl-sys/vendored"]